--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <small>© 2021-2025 Nike-React. All Rights Reserved.</small>
+    </footer>
     <!-- bundle js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
