add alignment on footer

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer style="text-align: center;" class="py-4">
         <small>© 2021-2025 Nike-React. All Rights Reserved.</small>
     </footer>
     <!-- bundle js  -->
